--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@
     border: 10px solid #fff;
 }
 
+.city-opacity {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 #sf {
     background-image: url(../img/san-francisco.jpeg);
     background-size: cover;
@@ -24,4 +31,3 @@
     background-image: url(../img/barcelona.jpg);
     background-size: cover;
 }
-
